--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,17 +38,16 @@ named = ">= 1.1.0"
 optional = true
 
 [tool.poetry.group.format.dependencies]
-black = "22.8.0"
+black = "22.12.0"
 
 [tool.poetry.group.format.dependencies.isort]
-version = "5.10.1"
-python = "^3.7"
+version = "5.11.4"
 
 [tool.poetry.group.check]
 optional = true
 
 [tool.poetry.group.check.dependencies]
-mypy = "0.982"
+mypy = "0.991"
 
 [tool.poetry.group.test]
 optional = true
@@ -70,7 +69,7 @@ version = "0.19.0"
 extras = ["python"]
 
 [tool.poetry.group.dev.dependencies]
-changelogging = "1.0.0"
+changelogging = "1.1.0"
 
 [tool.black]
 line_length = 100
@@ -127,7 +126,7 @@ warn_unreachable = true
 warn_redundant_casts = true
 warn_unused_ignores = false  # compatibility
 
-[tool.changelog]
+[tool.changelogging]
 name = "solus"
 version = "1.1.0"
 url = "https://github.com/nekitdev/solus"
