Prepare the next release.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,6 @@ updates:
     labels:
       - A-dependencies
       - P-normal
-      - S-triage
 
     schedule:
       interval: daily
@@ -20,9 +19,10 @@ updates:
     labels:
       - A-dependencies
       - P-normal
-      - S-triage
 
     schedule:
       interval: daily
 
     open-pull-requests-limit: 10
+
+    versioning-strategy: increase
