--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "solus"
-version = "1.1.0"
+version = "1.2.0"
 description = "Singleton types."
 authors = ["nekitdev"]
 license = "MIT"
@@ -22,69 +22,45 @@ classifiers = [
 ]
 
 [tool.poetry.urls]
-Discord = "https://nekit.dev/discord"
-Funding = "https://patreon.com/nekitdev"
+Chat = "https://nekit.dev/chat"
+Funding = "https://nekit.dev/funding"
 Issues = "https://github.com/nekitdev/solus/issues"
 
 [[tool.poetry.packages]]
 include = "solus"
 
 [tool.poetry.dependencies]
-python = ">= 3.7"
-
-named = ">= 1.1.0"
-
-[tool.poetry.group.format]
-optional = true
-
-[tool.poetry.group.format.dependencies]
-black = "23.3.0"
-flake8-pyproject = "1.2.3"
-
-[tool.poetry.group.format.dependencies.flake8]
-version = "6.0.0"
-python = ">= 3.8.1"
-
-[tool.poetry.group.format.dependencies.isort]
-version = "5.12.0"
 python = ">= 3.8"
 
-[tool.poetry.group.check]
-optional = true
+named = "^1.4.0"
+
+[tool.poetry.group.format.dependencies]
+ruff = "0.2.2"
 
 [tool.poetry.group.check.dependencies]
-mypy = "1.3.0"
-
-[tool.poetry.group.test]
-optional = true
+mypy = "1.8.0"
 
 [tool.poetry.group.test.dependencies]
-pytest = "7.3.1"
-pytest-cov = "4.0.0"
+coverage = "7.4.3"
+pytest = "8.0.2"
+pytest-cov = "4.1.0"
 
 [tool.poetry.group.docs]
 optional = true
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = "1.4.3"
-mkdocs-material = "9.1.14"
+mkdocs = "1.5.3"
+mkdocs-material = "9.5.11"
 
 [tool.poetry.group.docs.dependencies.mkdocstrings]
-version = "0.21.2"
+version = "0.24.0"
 extras = ["python"]
 
 [tool.poetry.group.dev.dependencies]
-changelogging = "1.3.0"
+changelogging = "1.4.0"
 
-[tool.black]
-line_length = 100
-
-[tool.flake8]
-max_line_length = 100
-
-[tool.isort]
-line_length = 100
-profile = "black"
+[tool.ruff]
+line-length = 100
 
 [tool.pytest.ini_options]
 addopts = "--cov solus"
@@ -110,33 +86,11 @@ exclude_lines = [
 directory = "coverage"
 
 [tool.mypy]
-show_column_numbers = true
-
-disallow_any_decorated = true
-disallow_any_generics = true
-warn_return_any = true
-
-no_implicit_optional = true
-strict_optional = true
-
-strict_equality = true
-
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_untyped_decorators = true
-disallow_untyped_globals = true
-
-disallow_incomplete_defs = true
-
-warn_no_return = true
-warn_unreachable = true
-
-warn_redundant_casts = true
-warn_unused_ignores = false  # compatibility
+strict = true
 
 [tool.changelogging]
 name = "solus"
-version = "1.1.0"
+version = "1.2.0"
 url = "https://github.com/nekitdev/solus"
 directory = "changes"
 output = "CHANGELOG.md"
@@ -153,5 +107,5 @@ wrap_size = 100
 display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]
 
 [build-system]
-requires = ["poetry-core >= 1.5.2"]
+requires = ["poetry-core >= 1.9.0"]
 build-backend = "poetry.core.masonry.api"
